--- a/www/index.html
+++ b/www/index.html
@@ -31,10 +31,10 @@
     </head>
     <body>
         <div class="app">
-            <h1>PhoneGap</h1>
+            <h1>Telus the App</h1></h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event listening">Connecting to telus network</p>
+                <p class="event received">Please tell us what you want</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
