--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <div class="app">
-            <h1>Telus the App</h1></h1>
+            <h1>Telus</h1></h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to telus network</p>
                 <p class="event received">Please tell us what you want</p>
