--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
-        <script src=""></script>
+        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <script>
             function onClick(){
                 $.ajax
