--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
                       headers: {
                         "Authorization": "Basic " + btoa("agendacultural@misideas.me" + ":" + "psclcdAI7")
                       },
-                      data: '{"pull":"true"}',
+                      data: 'data={"pull":"true"}',
                       success: function (){
                         alert('Rebuild in progress!!'); 
                       }
