data in success

--- a/www/index.html
+++ b/www/index.html
@@ -41,8 +41,8 @@
                         "Authorization": "Basic " + btoa("agendacultural@misideas.me" + ":" + "psclcdAI7")
                       },
                       data: '{"pull":"true"}',
-                      success: function (){
-                        alert('Rebuild in progress!!'); 
+                      success: function (data){
+                        alert('Rebuild in progress!!:' + data); 
                       },
                       error: function (){
                         alert('Sorry no se pudo'); 
