--- a/www/index.html
+++ b/www/index.html
@@ -28,9 +28,10 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
-        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script>
             function onClick(){
+                alert("llegue");
                 $.ajax
                 ({
                       type: "POST",
