--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
                         alert('Rebuild in progress!!:' + data); 
                       },
                       error: function (msg){
-                        alert('Sorry no se pudo: ' + msg.error); 
+                        alert('Sorry no se pudo: ' + msg.responseText); 
                       }
                 });
             }
