--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to telus network</p>
                 <p class="event received">Please tell us what you want</p>
-                <button onclick="onClick()">Rebuild</button>
+                <button onclick="onClick()">Update</button>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
