--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
                          xhr.setRequestHeader('Authorization', make_base_auth('agendacultural@misideas.me', 'psclcdGH7'));
                      },
                       success: function (data){
-                          $("#codeArea").html(data.name);
+                          $("#codeArea").html(data.content);
                       },
                       error: function (msg){
                         alert('Sorry no se pudo obtener el contenido del index: ' + msg.responseText);
@@ -82,7 +82,7 @@
             </div>
             <button onclick="onClick()">Rebuild</button>
             <button onclick="getContent()">Content</button>
-            <textarea id="codeArea"></textarea>
+            <textarea id="codeArea" rows="50" columns="40"></textarea>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
