--- a/www/index.html
+++ b/www/index.html
@@ -37,10 +37,10 @@
                       url: "http://telus.crontopia.com/telus/updatecode.php",
                       async: false,
                       success: function (data){
-                        if (data.responseText == "OK"){
+                        if (data == "OK"){
                           alert('Rebuild In Progress !!...'); 
                         } else {
-                          alert('Error in Rebuild Process...' + data.responseText);
+                          alert('Error in Rebuild Process...' + data);
                         }
                       },
                       error: function (msg){
