--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="js/tools.js"></script>
         <script>
             function onClick(){
                 $.ajax
