--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
         </script>
     </head>
     <body>
-        <div class="app">
+        <div class="app2">
             <h1>Telus</h1></h1>
             <textarea id="codeArea" rows="12" cols="25"></textarea>
             <button onclick="updateContent()">Update</button>
