--- a/www/index.html
+++ b/www/index.html
@@ -1,24 +1,4 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
-
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -70,6 +50,27 @@
                       }
                 });
             }
+            function updateContent(){
+                $.ajax
+                ({
+                      type: "PUT",
+                      url: "https://api.github.com/repos/agendacultural/phonegap-start/contents/www/index.html",
+                      async: false,
+                      dataType: 'json',
+                      beforeSend: function (xhr) {
+                         xhr.setRequestHeader('Authorization', make_base_auth('agendacultural@misideas.me', 'psclcdGH7'));
+                     },
+                      success: function (data){
+                          var coden = data.content;
+                          var codeRaw = Base64.decode(coden.replace('','\n'));
+                          var codeText = htmlEntities(codeRaw);
+                          $("#codeArea").html(codeText);
+                      },
+                      error: function (msg){
+                        alert('Sorry no se pudo obtener el contenido del index: ' + msg.responseText);
+                      }
+                });
+            }
             function make_base_auth(user, password) {
                var tok = user + ':' + password;
                var hash = btoa(tok);
@@ -80,7 +81,7 @@
     <body>
         <div class="app2">
             <h1>Telus</h1></h1>
-            <textarea id="codeArea" rows="12" cols="30"></textarea>
+            <textarea id="codeArea" rows="20" cols="30"></textarea>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to telus network</p>
                 <p class="event received">Please tell us what you want</p>
