--- a/www/index.html
+++ b/www/index.html
@@ -51,23 +51,27 @@
                 });
             }
             function updateContent(){
+                var content = $("#codeArea").html();
+                var fileSha = $("#fileSha").text();
+                var dataObject = {
+                    'message': "Updating index.html",
+                    'content': newContent,
+                    'sha': fileSha
+                };
                 $.ajax
                 ({
                       type: "PUT",
                       url: "https://api.github.com/repos/agendacultural/phonegap-start/contents/www/index.html",
-                      async: false,
-                      dataType: 'json',
+                      contentType: 'application/json',
+                      data: JSON.stringify(dataObject),
                       beforeSend: function (xhr) {
                          xhr.setRequestHeader('Authorization', make_base_auth('agendacultural@misideas.me', 'psclcdGH7'));
                      },
                       success: function (data){
-                          var coden = data.content;
-                          var codeRaw = Base64.decode(coden.replace('','\n'));
-                          var codeText = htmlEntities(codeRaw);
-                          $("#codeArea").html(codeText);
+                         alert("Success Updated " + data.name + " file!!");
                       },
                       error: function (msg){
-                        alert('Sorry no se pudo obtener el contenido del index: ' + msg.responseText);
+                        alert('Sorry no se pudo actualizar el contenido del index: ' + msg.responseText);
                       }
                 });
             }
@@ -82,6 +86,7 @@
         <div class="app2">
             <h1>Telus</h1></h1>
             <textarea id="codeArea" rows="20" cols="30"></textarea>
+            <span id="fileSha"></span>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to telus network</p>
                 <p class="event received">Please tell us what you want</p>
