--- a/www/index.html
+++ b/www/index.html
@@ -1,16 +1,16 @@
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-    &lt;head&gt;
-        &lt;meta charset="utf-8" /&gt;
-        &lt;meta name="format-detection" content="telephone=no" /&gt;
-        &lt;meta name="msapplication-tap-highlight" content="no" /&gt;
-        &lt;!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 --&gt;
-        &lt;meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width" /&gt;
-        &lt;link rel="stylesheet" type="text/css" href="css/index.css" /&gt;
-        &lt;title&gt;Hello World&lt;/title&gt;
-        &lt;script src="http://code.jquery.com/jquery-1.11.3.min.js"&gt;&lt;/script&gt;
-        &lt;script src="js/tools.js"&gt;&lt;/script&gt;
-        &lt;script&gt;
+&amp;lt;!DOCTYPE html&amp;gt;
+&amp;lt;html&amp;gt;
+    &amp;lt;head&amp;gt;
+        &amp;lt;meta charset="utf-8" /&amp;gt;
+        &amp;lt;meta name="format-detection" content="telephone=no" /&amp;gt;
+        &amp;lt;meta name="msapplication-tap-highlight" content="no" /&amp;gt;
+        &amp;lt;!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 --&amp;gt;
+        &amp;lt;meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width" /&amp;gt;
+        &amp;lt;link rel="stylesheet" type="text/css" href="css/index.css" /&amp;gt;
+        &amp;lt;title&amp;gt;Hello World&amp;lt;/title&amp;gt;
+        &amp;lt;script src="http://code.jquery.com/jquery-1.11.3.min.js"&amp;gt;&amp;lt;/script&amp;gt;
+        &amp;lt;script src="js/tools.js"&amp;gt;&amp;lt;/script&amp;gt;
+        &amp;lt;script&amp;gt;
             function onClick(){
                 $.ajax
                 ({
@@ -80,25 +80,25 @@
                var hash = btoa(tok);
                return 'Basic ' + hash;
             }
-        &lt;/script&gt;
-    &lt;/head&gt;
-    &lt;body&gt;
-        &lt;div class="app2"&gt;
-            &lt;h1&gt;Telus&lt;/h1&gt;&lt;/h1&gt;
-            &lt;textarea id="codeArea" rows="20" cols="30"&gt;&lt;/textarea&gt;
-            &lt;span id="fileSha"&gt;&lt;/span&gt;
-            &lt;div id="deviceready" class="blink"&gt;
-                &lt;p class="event listening"&gt;Connecting to telus network&lt;/p&gt;
-                &lt;p class="event received"&gt;Please tell us what you want&lt;/p&gt;
-            &lt;/div&gt;
-            &lt;button onclick="onClick()"&gt;Rebuild&lt;/button&gt;
-            &lt;button onclick="getContent()"&gt;Content&lt;/button&gt;
-            &lt;button onclick="updateContent()"&gt;Update&lt;/button&gt;
-        &lt;/div&gt;
-        &lt;script type="text/javascript" src="cordova.js"&gt;&lt;/script&gt;
-        &lt;script type="text/javascript" src="js/index.js"&gt;&lt;/script&gt;
-        &lt;script type="text/javascript"&gt;
+        &amp;lt;/script&amp;gt;
+    &amp;lt;/head&amp;gt;
+    &amp;lt;body&amp;gt;
+        &amp;lt;div class="app2"&amp;gt;
+            &amp;lt;h1&amp;gt;Telus&amp;lt;/h1&amp;gt;&amp;lt;/h1&amp;gt;
+            &amp;lt;textarea id="codeArea" rows="20" cols="30"&amp;gt;&amp;lt;/textarea&amp;gt;
+            &amp;lt;span id="fileSha"&amp;gt;&amp;lt;/span&amp;gt;
+            &amp;lt;div id="deviceready" class="blink"&amp;gt;
+                &amp;lt;p class="event listening"&amp;gt;Connecting to telus network&amp;lt;/p&amp;gt;
+                &amp;lt;p class="event received"&amp;gt;Please tell us what you want&amp;lt;/p&amp;gt;
+            &amp;lt;/div&amp;gt;
+            &amp;lt;button onclick="onClick()"&amp;gt;Rebuild&amp;lt;/button&amp;gt;
+            &amp;lt;button onclick="getContent()"&amp;gt;Content&amp;lt;/button&amp;gt;
+            &amp;lt;button onclick="updateContent()"&amp;gt;Update&amp;lt;/button&amp;gt;
+        &amp;lt;/div&amp;gt;
+        &amp;lt;script type="text/javascript" src="cordova.js"&amp;gt;&amp;lt;/script&amp;gt;
+        &amp;lt;script type="text/javascript" src="js/index.js"&amp;gt;&amp;lt;/script&amp;gt;
+        &amp;lt;script type="text/javascript"&amp;gt;
             app.initialize();
-        &lt;/script&gt;
-    &lt;/body&gt;
-&lt;/html&gt;
+        &amp;lt;/script&amp;gt;
+    &amp;lt;/body&amp;gt;
+&amp;lt;/html&amp;gt;
