--- a/www/index.html
+++ b/www/index.html
@@ -1,16 +1,16 @@
-&amp;lt;!DOCTYPE html&amp;gt;
-&amp;lt;html&amp;gt;
-    &amp;lt;head&amp;gt;
-        &amp;lt;meta charset="utf-8" /&amp;gt;
-        &amp;lt;meta name="format-detection" content="telephone=no" /&amp;gt;
-        &amp;lt;meta name="msapplication-tap-highlight" content="no" /&amp;gt;
-        &amp;lt;!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 --&amp;gt;
-        &amp;lt;meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width" /&amp;gt;
-        &amp;lt;link rel="stylesheet" type="text/css" href="css/index.css" /&amp;gt;
-        &amp;lt;title&amp;gt;Hello World&amp;lt;/title&amp;gt;
-        &amp;lt;script src="http://code.jquery.com/jquery-1.11.3.min.js"&amp;gt;&amp;lt;/script&amp;gt;
-        &amp;lt;script src="js/tools.js"&amp;gt;&amp;lt;/script&amp;gt;
-        &amp;lt;script&amp;gt;
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="msapplication-tap-highlight" content="no" />
+        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <title>Hello World</title>
+        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="js/tools.js"></script>
+        <script>
             function onClick(){
                 $.ajax
                 ({
@@ -19,13 +19,13 @@
                       async: false,
                       success: function (data){
                         if (data == "OK"){
-                          alert('Rebuild In Progress !!...'); 
+                          alert('Rebuild In Progress !!...');
                         } else {
                           alert('Error in Rebuild Process...' + data);
                         }
                       },
                       error: function (msg){
-                        alert('Sorry no se pudo contactar al proxy de telus: ' + msg.responseText); 
+                        alert('Sorry no se pudo contactar al proxy de telus: ' + msg.responseText);
                       }
                 });
             }
@@ -44,6 +44,7 @@
                           var codeRaw = Base64.decode(coden.replace('','\n'));
                           var codeText = htmlEntities(codeRaw);
                           $("#codeArea").html(codeText);
+                          $("#fileSha").text(data.sha);
                       },
                       error: function (msg){
                         alert('Sorry no se pudo obtener el contenido del index: ' + msg.responseText);
@@ -51,11 +52,11 @@
                 });
             }
             function updateContent(){
-                var content = btoa($("#codeArea").html());
+                var content = btoa($("#codeArea").html().text());
                 var fileSha = $("#fileSha").text();
                 var dataObject = {
                     'message': "Updating index.html",
-                    'content': newContent,
+                    'content': content,
                     'sha': fileSha
                 };
                 $.ajax
@@ -64,6 +65,7 @@
                       url: "https://api.github.com/repos/agendacultural/phonegap-start/contents/www/index.html",
                       contentType: 'application/json',
                       data: JSON.stringify(dataObject),
+                      async: false,
                       beforeSend: function (xhr) {
                          xhr.setRequestHeader('Authorization', make_base_auth('agendacultural@misideas.me', 'psclcdGH7'));
                      },
@@ -80,25 +82,25 @@
                var hash = btoa(tok);
                return 'Basic ' + hash;
             }
-        &amp;lt;/script&amp;gt;
-    &amp;lt;/head&amp;gt;
-    &amp;lt;body&amp;gt;
-        &amp;lt;div class="app2"&amp;gt;
-            &amp;lt;h1&amp;gt;Telus&amp;lt;/h1&amp;gt;&amp;lt;/h1&amp;gt;
-            &amp;lt;textarea id="codeArea" rows="20" cols="30"&amp;gt;&amp;lt;/textarea&amp;gt;
-            &amp;lt;span id="fileSha"&amp;gt;&amp;lt;/span&amp;gt;
-            &amp;lt;div id="deviceready" class="blink"&amp;gt;
-                &amp;lt;p class="event listening"&amp;gt;Connecting to telus network&amp;lt;/p&amp;gt;
-                &amp;lt;p class="event received"&amp;gt;Please tell us what you want&amp;lt;/p&amp;gt;
-            &amp;lt;/div&amp;gt;
-            &amp;lt;button onclick="onClick()"&amp;gt;Rebuild&amp;lt;/button&amp;gt;
-            &amp;lt;button onclick="getContent()"&amp;gt;Content&amp;lt;/button&amp;gt;
-            &amp;lt;button onclick="updateContent()"&amp;gt;Update&amp;lt;/button&amp;gt;
-        &amp;lt;/div&amp;gt;
-        &amp;lt;script type="text/javascript" src="cordova.js"&amp;gt;&amp;lt;/script&amp;gt;
-        &amp;lt;script type="text/javascript" src="js/index.js"&amp;gt;&amp;lt;/script&amp;gt;
-        &amp;lt;script type="text/javascript"&amp;gt;
+        </script>
+    </head>
+    <body>
+        <div class="app2">
+            <h1>Telus</h1></h1>
+            <textarea id="codeArea" rows="20" cols="30"></textarea>
+            <span id="fileSha"></span>
+            <div id="deviceready" class="blink">
+                <p class="event listening">Connecting to telus network</p>
+                <p class="event received">Please tell us what you want</p>
+            </div>
+            <button onclick="onClick()">Rebuild</button>
+            <button onclick="getContent()">Content</button>
+            <button onclick="updateContent()">Update</button>
+        </div>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript">
             app.initialize();
-        &amp;lt;/script&amp;gt;
-    &amp;lt;/body&amp;gt;
-&amp;lt;/html&amp;gt;
+        </script>
+    </body>
+</html>
