--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
+        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -40,8 +42,7 @@
                       success: function (data){
                           var coden = data.content;
                           var codeRaw = Base64.decode(coden.replace('','\n'));
-                          var codeText = htmlEntities(codeRaw);
-                          $("#codeArea").text(codeText);
+                          $("#codeArea").val(codeRaw);
                           $("#fileSha").text(data.sha);
                       },
                       error: function (msg){
@@ -50,7 +51,7 @@
                 });
             }
             function updateContent(){
-                var content = btoa($("#codeArea").text());
+                var content = btoa($("#codeArea").val());
                 var fileSha = $("#fileSha").text();
                 var dataObject = {
                     'message': "Updating index.html",
@@ -68,7 +69,7 @@
                          xhr.setRequestHeader('Authorization', make_base_auth('agendacultural@misideas.me', 'psclcdGH7'));
                      },
                       success: function (data){
-                         alert("Success Updated " + data.name + " file!!");
+                         alert("Success Updated " + data.content.name + " file!!");
                       },
                       error: function (msg){
                         alert('Sorry no se pudo actualizar el contenido del index: ' + msg.responseText);
