--- a/www/index.html
+++ b/www/index.html
@@ -85,7 +85,7 @@
     <body>
         <div class="app2">
             <h1>Telus</h1></h1>
-            <textarea id="codeArea" rows="20" cols="30"></textarea>
+            <textarea id="codeArea" rows="20"></textarea>
             <span id="fileSha"></span>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to telus network</p>
