Updating index.html

--- a/www/index.html
+++ b/www/index.html
@@ -93,7 +93,7 @@
             </div>
             <button onclick="onClick()">Rebuild</button>
             <button onclick="getContent('www/index.html')">Index</button>
-            <button onclick="getContent('www/css/index.html')">Css</button>
+            <button onclick="getContent('www/css/index.css')">Css</button>
             <button onclick="updateContent()">Update</button>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
