--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,7 @@
                      },
                       success: function (data){
                          alert("Success Updated " + data.content.name + " file!!");
+                          $("#fileSha").text(data.content.sha);
                       },
                       error: function (msg){
                         alert('Sorry no se pudo actualizar el contenido del index: ' + msg.responseText);
