--- a/www/index.html
+++ b/www/index.html
@@ -91,8 +91,8 @@
         <div class="app2">
             <h1>Telus</h1></h1>
             <textarea class="codeArea" id="codeArea" rows="17"></textarea><br/>
-            <span id="fileSha"></span><br/>
-            <span id="filePath"></span>
+            <span id="filePath"></span><br/>
+            <span id="fileSha"></span>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to telus network</p>
                 <p class="event received">Please tell us what you want</p>
