Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -92,7 +92,7 @@
             <h1>Telus</h1></h1>
             <textarea class="codeArea" id="codeArea" rows="17"></textarea><br/>
             <span id="filePath"></span><br/>
-            <span id="fileSha"></span>
+            <span id="fileSha"></span><br/>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to telus network</p>
                 <p class="event received">Please tell us what you want</p>
