Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -98,8 +98,8 @@
             <span id="filePath"></span><br/>
             <span id="fileSha"></span><br/>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to telus network</p>
-                <p class="event received">Please tell us what you want</p>
+                <p class="event listening">NO CONNECTED TO DEVICE</p>
+                <p class="event received">DEVICE READY</p>
             </div>
             <button onclick="onClick()">Rebuild</button>
             <button onclick="getContent('www/index.html')">Index</button>
