Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -86,7 +86,7 @@
                return 'Basic ' + hash;
             }
             function onPreview(){
-                var ref = window.open('http://telus.crontopia.com/website/', '_blank', 'location=no');
+                var ref = window.open('http://telus.crontopia.com/website/www/', '_blank', 'location=no');
                 ref.addEventListener('loadstart', function() { alert(event.url); });
             }
         </script>
