--- a/www/index.html
+++ b/www/index.html
@@ -93,7 +93,7 @@
     </head>
     <body>
         <div class="app2">
-            <h1>Telus</h1></h1>
+            <h1>Telus what you want</h1></h1>
             <textarea class="codeArea" id="codeArea" rows="17"></textarea><br/>
             <span id="filePath"></span><br/>
             <span id="fileSha"></span><br/>
