Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -104,6 +104,7 @@
             <button onclick="onClick()">Rebuild</button>
             <button onclick="getContent('www/index.html')">Index</button>
             <button onclick="getContent('www/css/index.css')">Css</button>
+            <button onclick="getContent('www/config.xml')">Config</button>
             <button onclick="updateContent()">Update</button>
             <button onclick="onPreview()">Preview</button>
         </div>
