Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -101,12 +101,12 @@
                 <p class="event listening">NO CONNECTED TO DEVICE</p>
                 <p class="event received">DEVICE READY</p>
             </div>
-            <button onclick="onClick()">Rebuild</button>
             <button onclick="getContent('www/index.html')">Index</button>
             <button onclick="getContent('www/css/index.css')">Css</button>
-            <button onclick="getContent('www/config.xml')">Config</button>
+            <button onclick="getContent('www/config.xml')">Config</button><br/>
             <button onclick="updateContent()">Update</button>
             <button onclick="onPreview()">Preview</button>
+            <button onclick="onClick()">Rebuild</button>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
