Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -101,9 +101,10 @@
                 <p class="event listening">NO CONNECTED TO DEVICE</p>
                 <p class="event received">DEVICE READY</p>
             </div>
-            <button onclick="getContent('www/index.html')">Index</button>
-            <button onclick="getContent('www/css/index.css')">Css</button>
-            <button onclick="getContent('www/config.xml')">Config</button><br/>
+            <button onclick="getContent('www/index.html')">HTML</button>
+            <button onclick="getContent('www/css/index.css')">CSS</button>
+            <button onclick="getContent('www/js/index.js')">JS</button><br/>
+            <button onclick="getContent('www/config.xml')">Config</button>
             <button onclick="updateContent()">Update</button>
             <button onclick="onPreview()">Preview</button>
             <button onclick="onClick()">Rebuild</button>
