--- a/www/index.html
+++ b/www/index.html
@@ -103,8 +103,8 @@
             </div>
             <button onclick="getContent('www/index.html')">HTML</button>
             <button onclick="getContent('www/css/index.css')">CSS</button>
-            <button onclick="getContent('www/js/index.js')">JS</button><br/>
-            <button onclick="getContent('www/config.xml')">Config</button>
+            <button onclick="getContent('www/js/index.js')">JS</button>
+            <button onclick="getContent('www/config.xml')">Config</button><br/>
             <button onclick="updateContent()">Update</button>
             <button onclick="onPreview()">Preview</button>
             <button onclick="onClick()">Rebuild</button>
