Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -127,7 +127,7 @@
               $.ajax
                 ({
                       type: "PUT",
-                      url: "https://api.github.com/repos/agendacultural/phonegap-start/contents/www/img",
+                      url: "https://api.github.com/repos/agendacultural/phonegap-start/contents/www/img/prima.jpg",
                       contentType: 'application/json',
                       data: JSON.stringify(dataObject),
                       async: true,
