Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -148,7 +148,7 @@
     </head>
     <body>
         <div class="app2">
-            <h1>Telus what you want</h1>
+            <h1>Telus what you want<button onclick="goEdit ()">Edit</button></h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">NO CONNECTED TO DEVICE</p>
                 <p class="event received">DEVICE READY</p>
