Updating www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -153,16 +153,18 @@
                 <p class="event listening">NO CONNECTED TO DEVICE</p>
                 <p class="event received">DEVICE READY</p>
             </div>
-            <button onclick="getContent('www/index.html')">HTML</button>
-            <button onclick="getContent('www/css/index.css')">CSS</button>
-            <button onclick="getContent('www/js/index.js')">JS</button>
-            <button onclick="getContent('www/config.xml')">Config</button><br/>
-            <button onclick="updateContent()">Update</button>
-            <button onclick="onClick()">Rebuild</button>
-            <button onclick="onPreview()">Preview</button><br/>
-            <span id="filePath"></span><br/>
-            <span id="fileSha"></span><br/>
-            <textarea class="codeArea" style="display: none" id="codeArea" rows="17"></textarea><br/>
+            <div id="editPanel">
+             <button onclick="getContent('www/index.html')">HTML</button>
+             <button onclick="getContent('www/css/index.css')">CSS</button>
+             <button onclick="getContent('www/js/index.js')">JS</button>
+             <button onclick="getContent('www/config.xml')">Config</button><br/>
+             <button onclick="updateContent()">Update</button>
+             <button onclick="onClick()">Rebuild</button>
+             <button onclick="onPreview()">Preview</button><br/>
+             <span id="filePath"></span><br/>
+             <span id="fileSha"></span><br/>
+             <textarea class="codeArea" id="codeArea" rows="17"></textarea><br/>
+            </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
